--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -121,8 +121,8 @@ ParallaxTerrain
 			_SteepMidpoint = 0.75
 			_DisplacementScale = 0.129999995
 			_DisplacementOffset = 0.0299999993
-			_SpecularIntensity = 0.3
-			_SpecularPower = 10
+			_SpecularIntensity = 0.8
+			_SpecularPower = 180
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.560000002
 			_EmissionColor = 0.05,0.05,0.05,1
@@ -130,12 +130,11 @@ ParallaxTerrain
 			_FresnelPower = 2
 			_BumpScale = 2.5
 			_RefractionIntensity = 0
-			_LowMidBlendStart = 0
-			_LowMidBlendEnd = 750
-			_MidHighBlendStart = 1200
-			_MidHighBlendEnd = 1500
-			_Tiling = 0.0600000024
-		}
+			_LowMidBlendStart = 550
+			_LowMidBlendEnd = 1000
+			_MidHighBlendStart = 1250
+			_MidHighBlendEnd = 4800
+			_Tiling = 0.02
 		ParallaxScaledProperties
 		{
 			minTerrainAltitude = -1088
