Fixed transition from scaled to pqs.

--- a/GameData/OuterParallax/MPE/_Configs/MPEUpdates.cfg
+++ b/GameData/OuterParallax/MPE/_Configs/MPEUpdates.cfg
@@ -1,9 +1,17 @@
 @Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTerrainTextures]
 {
-    @Body[Edas]
+    @Body[Edas]//
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 850
+            @fadeEnd = 1000
+        }
+		@PQS //2000
 		{
+			@fadeStart = 1000 //7500
+			@fadeEnd = 2000 //8500
+			@deactivateAltitude = 40000
             @Mods
             {
                 @VertexHeightMap,*
@@ -15,8 +23,16 @@
     }
     @Body[Vant]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 20000
+            @fadeEnd = 30000
+        }
+		@PQS //69000
 		{
+			@fadeStart = 30000 //30000
+			@fadeEnd = 50000 //40000
+			@deactivateAltitude = 75000
             @Mods
             {
                 @VertexHeightMap,*
@@ -28,8 +44,16 @@
     }
     @Body[Zore]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 9000
+            @fadeEnd = 13000
+        }
+		@PQS //34500
 		{
+			@fadeStart = 13000 //60000
+			@fadeEnd = 26000 //72000
+			@deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap,*
@@ -39,10 +63,18 @@
             }
 		}
 	}
-    @Body[LintMikey]
+    @Body[LintMikey] //
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 300
+            @fadeEnd = 350
+        }
+		@PQS //550
 		{
+			@fadeStart = 350 //3000
+			@fadeEnd = 400 //4000
+			@deactivateAltitude = 35000
             @Mods
             {
                 @VertexHeightMap,*
@@ -52,10 +84,18 @@
             }
 		}
     }
-    @Body[Crokslev]
+    @Body[Crokslev] //
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 8000
+            @fadeEnd = 12000
+        }
+		@PQS //32500
 		{
+			@fadeStart = 12000 //10000
+			@fadeEnd = 25000 //15000
+			@deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap,*
@@ -67,8 +107,16 @@
     }
     @Body[Geito]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 1000
+            @fadeEnd = 1250
+        }
+		@PQS //1000
 		{
+			@fadeStart = 1250 //5200
+			@fadeEnd = 1500 //10400
+			@deactivateAltitude = 35000
             @Mods
             {
                 @VertexHeightMap,*
@@ -80,8 +128,16 @@
     }
     @Body[Havous]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 65000
+            @fadeEnd = 70000
+        }
+		@PQS //116666
 		{
+			@fadeStart = 70000 //70000
+			@fadeEnd = 90000 //90000
+			@deactivateAltitude = 120000
             @Mods
             {
                 @VertexHeightMap,*
@@ -93,8 +149,16 @@
     }
     @Body[Kal]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 1250
+            @fadeEnd = 1500
+        }
+		@PQS //3000
 		{
+			@fadeStart = 1500 //2000
+			@fadeEnd = 2750 //3000
+			@deactivateAltitude = 35000
             @Mods
             {
                 @VertexHeightMap,*
@@ -106,8 +170,16 @@
     }
     @Body[KiKi]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 2500
+            @fadeEnd = 3000
+        }
+		@PQS //5320
 		{
+			@fadeStart = 3000 //25000
+			@fadeEnd = 5500 //35000
+			@deactivateAltitude = 35000
             @Mods
             {
                 @VertexHeightMap,*
@@ -119,8 +191,16 @@
     }
     @Body[Mracksis]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 20000
+            @fadeEnd = 30000
+        }
+		@PQS //71500
 		{
+			@fadeStart = 30000 //10000
+			@fadeEnd = 50000 //20000
+			@deactivateAltitude = 75000
             @Mods
             {
                 @VertexHeightMap,*
@@ -132,8 +212,16 @@
     }
     @Body[Flake]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 600
+            @fadeEnd = 900
+        }
+		@PQS //2000
 		{
+			@fadeStart = 900 //2800
+			@fadeEnd = 1200 //500
+			@deactivateAltitude = 35000
             @Mods
             {
                 @VertexHeightMap,*
@@ -145,8 +233,16 @@
     }
     @Body[Ervo]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 15000
+            @fadeEnd = 23000
+        }
+		@PQS //192000
 		{
+			@fadeStart = 23000 //10000
+			@fadeEnd = 40000 //20000
+			@deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap,*
@@ -158,8 +254,16 @@
     }
     @Body[Archae]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 4500
+            @fadeEnd = 7000
+        }
+		@PQS //55000
 		{
+			@fadeStart = 7000 //60000
+			@fadeEnd = 14000 //80000
+			@deactivateAltitude = 40000
             @Mods
             {
                 @VertexHeightMap,*
@@ -171,8 +275,16 @@
     }
     @Body[Soden]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 20000
+            @fadeEnd = 30000
+        }
+		@PQS // 61000
 		{
+			@fadeStart = 30000 //10000
+			@fadeEnd = 50000 //20000
+			@deactivateAltitude = 75000
             @Mods
             {
                 @VertexHeightMap,*
@@ -184,8 +296,16 @@
     }
     @Body[Lon]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 2500
+            @fadeEnd = 3000
+        }
+		@PQS //5000
 		{
+			@fadeStart = 3000 //6000
+			@fadeEnd = 5500 //9000
+			@deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap,*
