--- a/GameData/OuterParallax/OPM/_Configs/ParallaxScaled.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/ParallaxScaled.cfg
@@ -78,11 +78,11 @@
             }
             TerrainMaterialOverride
             {
-                _SpecularPower = 32
-                _SpecularIntensity = 0.6
+                _SpecularPower = 2.
+                _SpecularIntensity = 0.5
                 _EmissionColor = 0,0,0,1
-                _BumpScale = 1.1
-                _Tiling = 0.0004
+                _BumpScale = 0.3
+                _Tiling = 0.0002
             }
         }
     }
@@ -138,8 +138,8 @@
             }
             TerrainMaterialOverride
             {
-                _SpecularPower = 10
-                _SpecularIntensity = 0.7
+                _SpecularPower = 20
+                _SpecularIntensity = 0.4
                 _EmissionColor = 0,0,0,1
                 _BumpScale = 0.3
                 _Tiling = 0.002
