--- a/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
@@ -1,9 +1,31 @@
 @Kopernicus:AFTER[OPM]:NEEDS[Parallax_StockTerrainTextures]
 {
+    @Body[Hale]
+    {
+        @ScaledVersion
+        {
+            @fadeStart = 1500
+            @fadeEnd = 3000
+        }
+		@PQS //6000
+		{
+			@fadeStart = 3000 //27000
+			@fadeEnd = 6000 //54000
+			@deactivateAltitude = 30000 //54270
+		}
+    }
     @Body[Ovok]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 12500
+            @fadeEnd = 17500
+        }
+		@PQS //26000
 		{
+			@fadeStart = 17500 //26000
+			@fadeEnd = 25000 //9000
+			@deactivateAltitude = 40000 //52260
             @Mods
             {
                 @VertexHeightMap
@@ -15,8 +37,16 @@
     }
     @Body[Slate]
     {
-		@PQS
+        @ScaledVersion
+        {
+            %fadeStart = 30000
+            %fadeEnd = 50000
+        }
+		@PQS //540000
 		{
+			@fadeStart = 50000 //270000
+			@fadeEnd = 80000 //540000
+			@deactivateAltitude = 130000
             @Mods
             {
                 @VertexHeightMap
@@ -28,8 +58,16 @@
     }
     @Body[Nissee]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 9000
+            @fadeEnd = 13000
+        }
+		@PQS //30000
 		{
+			@fadeStart = 13000 //85000
+			@fadeEnd = 26000 //170000
+			@deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap
@@ -41,8 +79,16 @@
     }
     @Body[Polta]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 15000
+            @fadeEnd = 23000
+        }
+		@PQS //220000
 		{
+			@fadeStart = 23000 //110000
+			@fadeEnd = 40000 //220000
+			@deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap
@@ -54,8 +100,16 @@
     }
     @Body[Priax]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 32500
+            @fadeEnd = 37500
+        }
+		@PQS //74000
 		{
+			@fadeStart = 37500 //222000
+			@fadeEnd = 42500 //444000
+			@deactivateAltitude = 52500
             @Mods
             {
                 @VertexHeightMap
@@ -67,8 +121,16 @@
     }
     @Body[Tal]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 15000
+            @fadeEnd = 16000
+        }
+		@PQS //22000
 		{
+			@fadeStart = 16000 //68800
+			@fadeEnd = 21000 //137600
+			@deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap
@@ -82,8 +144,16 @@
     }
     @Body[Wal]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 30000
+            @fadeEnd = 50000
+        }
+		@PQS //370000
 		{
+			@fadeStart = 50000 //185000
+			@fadeEnd = 75000 //370000
+			@deactivateAltitude = 110000
             @Mods
             {
                 @VertexHeightMap
@@ -95,8 +165,16 @@
     }
     @Body[Plock]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 30000
+            @fadeEnd = 50000
+        }
+		@PQS //189000
 		{
+			@fadeStart = 50000 //94500
+			@fadeEnd = 80000 //189000
+			@deactivateAltitude = 120000
             @Mods
             {
                 @VertexHeightMap
@@ -108,8 +186,16 @@
     }
     @Body[Karen]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 20000
+            @fadeEnd = 30000
+        }
+		@PQS //85050
 		{
+			@fadeStart = 30000 //42525
+			@fadeEnd = 50000 //85050
+			@deactivateAltitude = 75000
             @Mods
             {
                 @VertexHeightMap
@@ -121,8 +207,16 @@
     }
     @Body[Thatmo]
     {
-		@PQS
+        @ScaledVersion
+        {
+            @fadeStart = 10000
+            @fadeEnd = 20000
+        }
+		@PQS //286000
 		{
+			@fadeStart = 20000 //143000
+			@fadeEnd = 32500 //9000
+			@deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap
