--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -136,19 +136,19 @@ ParallaxTerrain
 			_DisplacementScale = 0.02
 			_DisplacementOffset = 0.0199999996
 			_SpecularIntensity = 1.5
-			_SpecularPower = 10
-			_EnvironmentMapFactor = 0.5
+			_SpecularPower = 8
+			_EnvironmentMapFactor = 0.05
 			_Hapke = 0.800000012
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.15,0.1,0.05,1
 			_FresnelPower = 3
-			_BumpScale = 0.8
+			_BumpScale = 1.4
 			_RefractionIntensity = 0
 			_LowMidBlendStart = 0
 			_LowMidBlendEnd = 300
 			_MidHighBlendStart = 1300
 			_MidHighBlendEnd = 1500
-			_Tiling = 0.0666666701
+			_Tiling = 0.02
 		}
 	}
 	Body
