--- a/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
@@ -226,4 +226,25 @@
             }
 		}
     }
+    @Body[Tekto]
+    {
+        @ScaledVersion
+        {
+            @fadeStart = 10000
+            @fadeEnd = 20000
+        }
+		@PQS //280000
+		{
+			@fadeStart = 20000 //140000
+			@fadeEnd = 32500 //280000
+			@deactivateAltitude = 50000
+            @Mods
+            {
+                @VertexHeightMap
+                {
+                    |_ = VertexMitchellNetravaliHeightMap
+                }
+            }
+		}
+    }
 }
