--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -1,4 +1,4 @@
-ParallaxTerrain
+ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
@@ -27,11 +27,11 @@ ParallaxTerrain
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
 			_SpecularPower = 232
-			_SpecularIntensity = 1
+			_SpecularIntensity = 0.2
 			_FresnelPower = 2
 			_EnvironmentMapFactor = 0.5
 			_RefractionIntensity = 0
-			_Tiling = 0.0666666701
+			_Tiling = 0.02
 			_Hapke = 0.5
 			_BumpScale = 2.5
 			_EmissionColor = 0.0500000007,0.0500000007,0.0500000007,1
@@ -59,44 +59,20 @@ ParallaxTerrain
 			_SteepMidpoint = 0.5
 			_DisplacementScale = 0.03
 			_DisplacementOffset = 0
-			_SpecularIntensity = 1.0
-			_SpecularPower = 100
-			_EnvironmentMapFactor = 0.3
+			_SpecularIntensity = 0.1
+			_SpecularPower = 16
+			_EnvironmentMapFactor = 0.15
 			_Hapke = 0.4
 			_EmissionColor = 0.1,0.1,0.1,1
 			_FresnelColor = 0.3,0.3,0.3,1
 			_FresnelPower = 6
-			_BumpScale = 1.5
+			_BumpScale = 3
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10001
 			_LowMidBlendEnd = -10000
 			_MidHighBlendStart = 10000
 			_MidHighBlendEnd = 10001
-			_Tiling = 0.08
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = 0
-			maxTerrainAltitude = 14000
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 10
-				_SpecularIntensity = 0.7
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 0.3
-				_Tiling = 0.002
-			}
+			_Tiling = 0.02
 		}
 	}
 	Body
@@ -121,8 +97,8 @@ ParallaxTerrain
 			_SteepMidpoint = 0.75
 			_DisplacementScale = 0.129999995
 			_DisplacementOffset = 0.0299999993
-			_SpecularIntensity = 0.3
-			_SpecularPower = 10
+			_SpecularIntensity = 0.15
+			_SpecularPower = 12
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.560000002
 			_EmissionColor = 0.05,0.05,0.05,1
@@ -130,35 +106,11 @@ ParallaxTerrain
 			_FresnelPower = 2
 			_BumpScale = 2.5
 			_RefractionIntensity = 0
-			_LowMidBlendStart = 0
-			_LowMidBlendEnd = 750
-			_MidHighBlendStart = 1200
-			_MidHighBlendEnd = 1500
-			_Tiling = 0.0600000024
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -1088
-			maxTerrainAltitude = 16416
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 10
-				_SpecularIntensity = 0.7
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 0.3
-				_Tiling = 0.002
-			}
+			_LowMidBlendStart = 550
+			_LowMidBlendEnd = 1000
+			_MidHighBlendStart = 1250
+			_MidHighBlendEnd = 4800
+			_Tiling = 0.01
 		}
 	}
 	Body
@@ -184,50 +136,19 @@ ParallaxTerrain
 			_DisplacementScale = 0.02
 			_DisplacementOffset = 0.0199999996
 			_SpecularIntensity = 1.5
-			_SpecularPower = 10
-			_EnvironmentMapFactor = 0.5
+			_SpecularPower = 8
+			_EnvironmentMapFactor = 0.05
 			_Hapke = 0.800000012
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.15,0.1,0.05,1
 			_FresnelPower = 3
-			_BumpScale = 0.8
+			_BumpScale = 1.4
 			_RefractionIntensity = 0
 			_LowMidBlendStart = 0
 			_LowMidBlendEnd = 300
 			_MidHighBlendStart = 1300
 			_MidHighBlendEnd = 1500
-			_Tiling = 0.0666666701
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -631
-			maxTerrainAltitude = 5954
-			usingStockMesh = True
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_height.dds
-				_AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_Atmo.dds
-				_PlanetBumpScale = 1
-				_OceanSpecularPower = 0.5
-				_OceanSpecularIntensity = 0.35
-				_AtmosphereThickness = 2.33
-				_OceanAltitude = 0
-				Keywords
-				{
-					name = OCEAN
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 20
-				_SpecularIntensity = 0.5
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 0.8
-				_Tiling = 0.001
-			}
+			_Tiling = 0.02
 		}
 	}
 	Body
@@ -252,8 +173,8 @@ ParallaxTerrain
 			_SteepMidpoint = 0.600000024
 			_DisplacementScale = 0.0599999987
 			_DisplacementOffset = 0
-			_SpecularIntensity = 0.400000006
-			_SpecularPower = 2
+			_SpecularIntensity = 0.1
+			_SpecularPower = 12
 			_EnvironmentMapFactor = 1
 			_Hapke = 0.349999994
 			_EmissionColor = 0,0,0,1
@@ -266,30 +187,6 @@ ParallaxTerrain
 			_MidHighBlendStart = 30000
 			_MidHighBlendEnd = 33500
 			_Tiling = 0.0666666701
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -62
-			maxTerrainAltitude = 11904
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 45
-				_SpecularIntensity = 0.3
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 1.3
-				_Tiling = 0.001
-			}
 		}
 	}
 	Body
@@ -327,31 +224,7 @@ ParallaxTerrain
 			_LowMidBlendEnd = 2000
 			_MidHighBlendStart = 3000
 			_MidHighBlendEnd = 3300
-			_Tiling = 0.0666666701
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -582
-			maxTerrainAltitude = 20760
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 40
-				_SpecularIntensity = 0.15
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 0.6
-				_Tiling = 0.003
-			}
+			_Tiling = 0.03
 		}
 	}
 	Body
@@ -389,31 +262,7 @@ ParallaxTerrain
 			_LowMidBlendEnd = -499
 			_MidHighBlendStart = -498
 			_MidHighBlendEnd = -497
-			_Tiling = 0.0666666701
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = 8240
-			maxTerrainAltitude = 30479
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 36
-				_SpecularIntensity = 0.25
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 1.0
-				_Tiling = 0.0006
-			}
+			_Tiling = 0.02
 		}
 	}
 	Body
@@ -453,30 +302,6 @@ ParallaxTerrain
 			_MidHighBlendEnd = 90001
 			_Tiling = 0.0666666701
 		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -466
-			maxTerrainAltitude = 8835
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_Tiling = 0.003
-				_BumpScale = 0.5
-				_SpecularPower = 35
-				_SpecularIntensity = 0.4
-				_EmissionColor = 0,0,0,1
-			}
-		}
 	}
 	Body
 	{
@@ -501,8 +326,8 @@ ParallaxTerrain
 			_DisplacementScale = 0.03
 			_DisplacementOffset = 0
 			_SpecularIntensity = 1.0
-			_SpecularPower = 100
-			_EnvironmentMapFactor = 0.3
+			_SpecularPower = 10
+			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.430000007
 			_EmissionColor = 0.1,0.1,0.1,1
 			_FresnelColor = 0.3,0.3,0.3,1
@@ -513,37 +338,7 @@ ParallaxTerrain
 			_LowMidBlendEnd = -10000
 			_MidHighBlendStart = 10000
 			_MidHighBlendEnd = 10001
-			_Tiling = 0.08
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -341
-			maxTerrainAltitude = 4981
-			usingStockMesh = True
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_height.dds
-				_AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_Atmo.dds
-				_PlanetBumpScale = 1
-				_OceanSpecularPower = 0.5
-				_OceanSpecularIntensity = 0.35
-				_AtmosphereThickness = 2.33
-				_OceanAltitude = 0
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 32
-				_SpecularIntensity = 0.6
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 1.1
-				_Tiling = 0.0004
-			}
+			_Tiling = 0.02
 		}
 	}
 	Body
@@ -569,43 +364,19 @@ ParallaxTerrain
 			_DisplacementScale = 0.04
 			_DisplacementOffset = 0
 			_SpecularIntensity = 0.2
-			_SpecularPower = 32
+			_SpecularPower = 22
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.6
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.1,0.1,0.1,1
 			_FresnelPower = 2
-			_BumpScale = 2
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
 			_MidHighBlendStart = -498
 			_MidHighBlendEnd = -497
-			_Tiling = 0.0666666701
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = 1933
-			maxTerrainAltitude = 9113
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 32
-				_SpecularIntensity = 0.2
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 1.3
-				_Tiling = 0.0005
-			}
+			_Tiling = 0.04
 		}
 	}
 	Body
@@ -631,7 +402,7 @@ ParallaxTerrain
 			_DisplacementScale = 0.04
 			_DisplacementOffset = 0
 			_SpecularIntensity = 0.2
-			_SpecularPower = 8
+			_SpecularPower = 22
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.430000007
 			_EmissionColor = 0.05,0.03,0.02,1
@@ -643,31 +414,7 @@ ParallaxTerrain
 			_LowMidBlendEnd = -1000
 			_MidHighBlendStart = 10000
 			_MidHighBlendEnd = 10000
-			_Tiling = 0.07
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -461
-			maxTerrainAltitude = 4655
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 6
-				_SpecularIntensity = 0.1
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 0.3
-				_Tiling = 0.0003
-			}
+			_Tiling = 0.02
 		}
 	}
 	Body
@@ -692,44 +439,20 @@ ParallaxTerrain
 			_SteepMidpoint = 0.620000005
 			_DisplacementScale = 0.08
 			_DisplacementOffset = 0.00999999978
-			_SpecularIntensity = 0.3
-			_SpecularPower = 10
+			_SpecularIntensity = 0.1
+			_SpecularPower = 80
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.430000007
 			_EmissionColor = 0.05,0.05,0.05,1
 			_FresnelColor = 0.1,0.1,0.1,1
 			_FresnelPower = 2
-			_BumpScale = 2.5
+			_BumpScale = 2
 			_RefractionIntensity = 0
 			_LowMidBlendStart = 0
 			_LowMidBlendEnd = 1
 			_MidHighBlendStart = 1400
 			_MidHighBlendEnd = 1700
-			_Tiling = 0.08
-		}
-		ParallaxScaledProperties
-		{
-			minTerrainAltitude = -420
-			maxTerrainAltitude = 4655
-			mode = FromTerrain
-			Material
-			{
-				_ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_color.dds
-				_BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_normal.dds
-				_HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_height.dds
-				_PlanetBumpScale = 1
-				Keywords
-				{
-				}
-			}
-			TerrainMaterialOverride
-			{
-				_SpecularPower = 22
-				_SpecularIntensity = 0.1
-				_EmissionColor = 0,0,0,1
-				_BumpScale = 1.5
-				_Tiling = 0.0003
-			}
+			_Tiling = 0.01
 		}
 	}
 }
