--- a/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
@@ -6,6 +6,13 @@
         {
             @fadeStart = 1500
             @fadeEnd = 3000
+			
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Hale_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Hale_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //6000
 		{
@@ -20,6 +27,13 @@
         {
             @fadeStart = 12500
             @fadeEnd = 17500
+			
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Ovok_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Ovok_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //26000
 		{
@@ -41,6 +55,12 @@
         {
             %fadeStart = 30000
             %fadeEnd = 50000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Slate_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Slate_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //540000
 		{
@@ -62,6 +82,12 @@
         {
             @fadeStart = 9000
             @fadeEnd = 13000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Nissee_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Nissee_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //30000
 		{
@@ -83,6 +109,12 @@
         {
             @fadeStart = 15000
             @fadeEnd = 23000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Polta_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Polta_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //220000
 		{
@@ -104,6 +136,12 @@
         {
             @fadeStart = 32500
             @fadeEnd = 37500
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Priax_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Priax_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //74000
 		{
@@ -125,6 +163,12 @@
         {
             @fadeStart = 15000
             @fadeEnd = 16000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Tal_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Tal_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //22000
 		{
@@ -148,6 +192,12 @@
         {
             @fadeStart = 30000
             @fadeEnd = 50000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Wal_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Wal_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //370000
 		{
@@ -169,6 +219,12 @@
         {
             @fadeStart = 30000
             @fadeEnd = 50000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Plock_color.dds
+				%normals = OPM/OPM_Textures/PluginData/Plock_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //189000
 		{
@@ -190,6 +246,12 @@
         {
             @fadeStart = 20000
             @fadeEnd = 30000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Karen_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Karen_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //85050
 		{
@@ -211,6 +273,12 @@
         {
             @fadeStart = 10000
             @fadeEnd = 20000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Thatmo_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Thatmo_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //286000
 		{
@@ -232,6 +300,12 @@
         {
             @fadeStart = 10000
             @fadeEnd = 20000
+			@Material
+			{
+				%texture = OPM/OPM_Textures/PluginData/Tekto_color.dds
+		        %normals = OPM/OPM_Textures/PluginData/Tekto_normal.dds
+			}
+			!OnDemand {}
         }
 		@PQS //280000
 		{
