--- a/GameData/OuterParallax/MPE/_Configs/MPEUpdates.cfg
+++ b/GameData/OuterParallax/MPE/_Configs/MPEUpdates.cfg
@@ -6,6 +6,13 @@
         {
             @fadeStart = 850
             @fadeEnd = 1000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //2000
 		{
@@ -27,6 +34,13 @@
         {
             @fadeStart = 20000
             @fadeEnd = 30000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //69000
 		{
@@ -48,6 +62,13 @@
         {
             @fadeStart = 9000
             @fadeEnd = 13000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //34500
 		{
@@ -69,6 +90,13 @@
         {
             @fadeStart = 300
             @fadeEnd = 350
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //550
 		{
@@ -90,6 +118,13 @@
         {
             @fadeStart = 8000
             @fadeEnd = 12000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //32500
 		{
@@ -111,6 +146,13 @@
         {
             @fadeStart = 1000
             @fadeEnd = 1250
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //1000
 		{
@@ -132,6 +174,13 @@
         {
             @fadeStart = 65000
             @fadeEnd = 70000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //116666
 		{
@@ -153,6 +202,13 @@
         {
             @fadeStart = 1250
             @fadeEnd = 1500
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //3000
 		{
@@ -174,6 +230,13 @@
         {
             @fadeStart = 2500
             @fadeEnd = 3000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //5320
 		{
@@ -195,6 +258,13 @@
         {
             @fadeStart = 20000
             @fadeEnd = 30000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //71500
 		{
@@ -216,6 +286,13 @@
         {
             @fadeStart = 1250
             @fadeEnd = 1750
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //2000
 		{
@@ -237,6 +314,13 @@
         {
             @fadeStart = 15000
             @fadeEnd = 23000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //192000
 		{
@@ -258,6 +342,13 @@
         {
             @fadeStart = 4500
             @fadeEnd = 7000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //55000
 		{
@@ -279,6 +370,13 @@
         {
             @fadeStart = 20000
             @fadeEnd = 30000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS // 61000
 		{
@@ -300,6 +398,13 @@
         {
             @fadeStart = 2500
             @fadeEnd = 3000
+			
+			@Material
+			{
+				%texture = OuterParallax/Textures/PluginData/Blank.png
+		        %normals = OuterParallax/Textures/PluginData/Blank.png
+			}
+			!OnDemand {}
         }
 		@PQS //5000
 		{
