--- a/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/OPMUpdates.cfg
@@ -6,20 +6,20 @@
         {
             @fadeStart = 1500
             @fadeEnd = 3000
-			
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Hale_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Hale_normal.dds
-			}
-			!OnDemand {}
+            
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //6000
-		{
-			@fadeStart = 3000 //27000
-			@fadeEnd = 6000 //54000
-			@deactivateAltitude = 30000 //54270
-		}
+        @PQS //6000
+        {
+            @fadeStart = 3000 //27000
+            @fadeEnd = 6000 //54000
+            @deactivateAltitude = 30000 //54270
+        }
     }
     @Body[Ovok]
     {
@@ -27,19 +27,19 @@
         {
             @fadeStart = 12500
             @fadeEnd = 17500
-			
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Ovok_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Ovok_normal.dds
-			}
-			!OnDemand {}
+            
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //26000
-		{
-			@fadeStart = 17500 //26000
-			@fadeEnd = 25000 //9000
-			@deactivateAltitude = 40000 //52260
+        @PQS //26000
+        {
+            @fadeStart = 17500 //26000
+            @fadeEnd = 25000 //9000
+            @deactivateAltitude = 40000 //52260
             @Mods
             {
                 @VertexHeightMap
@@ -47,7 +47,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Slate]
     {
@@ -55,18 +55,19 @@
         {
             %fadeStart = 30000
             %fadeEnd = 50000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Slate_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Slate_normal.dds
-			}
-			!OnDemand {}
+            
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //540000
-		{
-			@fadeStart = 50000 //270000
-			@fadeEnd = 80000 //540000
-			@deactivateAltitude = 130000
+        @PQS //540000
+        {
+            @fadeStart = 50000 //270000
+            @fadeEnd = 80000 //540000
+            @deactivateAltitude = 130000
             @Mods
             {
                 @VertexHeightMap
@@ -74,7 +75,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Nissee]
     {
@@ -82,18 +83,18 @@
         {
             @fadeStart = 9000
             @fadeEnd = 13000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Nissee_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Nissee_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //30000
-		{
-			@fadeStart = 13000 //85000
-			@fadeEnd = 26000 //170000
-			@deactivateAltitude = 70000
+        @PQS //30000
+        {
+            @fadeStart = 13000 //85000
+            @fadeEnd = 26000 //170000
+            @deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap
@@ -101,7 +102,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Polta]
     {
@@ -109,18 +110,18 @@
         {
             @fadeStart = 15000
             @fadeEnd = 23000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Polta_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Polta_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //220000
-		{
-			@fadeStart = 23000 //110000
-			@fadeEnd = 40000 //220000
-			@deactivateAltitude = 70000
+        @PQS //220000
+        {
+            @fadeStart = 23000 //110000
+            @fadeEnd = 40000 //220000
+            @deactivateAltitude = 70000
             @Mods
             {
                 @VertexHeightMap
@@ -128,7 +129,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Priax]
     {
@@ -136,18 +137,18 @@
         {
             @fadeStart = 32500
             @fadeEnd = 37500
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Priax_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Priax_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //74000
-		{
-			@fadeStart = 37500 //222000
-			@fadeEnd = 42500 //444000
-			@deactivateAltitude = 52500
+        @PQS //74000
+        {
+            @fadeStart = 37500 //222000
+            @fadeEnd = 42500 //444000
+            @deactivateAltitude = 52500
             @Mods
             {
                 @VertexHeightMap
@@ -155,7 +156,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Tal]
     {
@@ -163,18 +164,18 @@
         {
             @fadeStart = 15000
             @fadeEnd = 16000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Tal_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Tal_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //22000
-		{
-			@fadeStart = 16000 //68800
-			@fadeEnd = 21000 //137600
-			@deactivateAltitude = 50000
+        @PQS //22000
+        {
+            @fadeStart = 16000 //68800
+            @fadeEnd = 21000 //137600
+            @deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap
@@ -184,7 +185,7 @@
                     C = 0
                 }
             }
-		}
+        }
     }
     @Body[Wal]
     {
@@ -192,18 +193,18 @@
         {
             @fadeStart = 30000
             @fadeEnd = 50000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Wal_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Wal_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //370000
-		{
-			@fadeStart = 50000 //185000
-			@fadeEnd = 75000 //370000
-			@deactivateAltitude = 110000
+        @PQS //370000
+        {
+            @fadeStart = 50000 //185000
+            @fadeEnd = 75000 //370000
+            @deactivateAltitude = 110000
             @Mods
             {
                 @VertexHeightMap
@@ -211,7 +212,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Plock]
     {
@@ -219,18 +220,18 @@
         {
             @fadeStart = 30000
             @fadeEnd = 50000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Plock_color.dds
-				%normals = OPM/OPM_Textures/PluginData/Plock_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //189000
-		{
-			@fadeStart = 50000 //94500
-			@fadeEnd = 80000 //189000
-			@deactivateAltitude = 120000
+        @PQS //189000
+        {
+            @fadeStart = 50000 //94500
+            @fadeEnd = 80000 //189000
+            @deactivateAltitude = 120000
             @Mods
             {
                 @VertexHeightMap
@@ -238,7 +239,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Karen]
     {
@@ -246,18 +247,18 @@
         {
             @fadeStart = 20000
             @fadeEnd = 30000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Karen_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Karen_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //85050
-		{
-			@fadeStart = 30000 //42525
-			@fadeEnd = 50000 //85050
-			@deactivateAltitude = 75000
+        @PQS //85050
+        {
+            @fadeStart = 30000 //42525
+            @fadeEnd = 50000 //85050
+            @deactivateAltitude = 75000
             @Mods
             {
                 @VertexHeightMap
@@ -265,7 +266,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Thatmo]
     {
@@ -273,18 +274,18 @@
         {
             @fadeStart = 10000
             @fadeEnd = 20000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Thatmo_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Thatmo_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //286000
-		{
-			@fadeStart = 20000 //143000
-			@fadeEnd = 32500 //9000
-			@deactivateAltitude = 50000
+        @PQS //286000
+        {
+            @fadeStart = 20000 //143000
+            @fadeEnd = 32500 //9000
+            @deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap
@@ -292,7 +293,7 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
     @Body[Tekto]
     {
@@ -300,18 +301,18 @@
         {
             @fadeStart = 10000
             @fadeEnd = 20000
-			@Material
-			{
-				%texture = OPM/OPM_Textures/PluginData/Tekto_color.dds
-		        %normals = OPM/OPM_Textures/PluginData/Tekto_normal.dds
-			}
-			!OnDemand {}
+            @Material
+            {
+                %texture = OuterParallax/Textures/PluginData/Blank.png
+                %normals = OuterParallax/Textures/PluginData/Blank.png
+            }
+            !OnDemand {}
         }
-		@PQS //280000
-		{
-			@fadeStart = 20000 //140000
-			@fadeEnd = 32500 //280000
-			@deactivateAltitude = 50000
+        @PQS //280000
+        {
+            @fadeStart = 20000 //140000
+            @fadeEnd = 32500 //280000
+            @deactivateAltitude = 50000
             @Mods
             {
                 @VertexHeightMap
@@ -319,6 +320,6 @@
                     |_ = VertexMitchellNetravaliHeightMap
                 }
             }
-		}
+        }
     }
 }
