Testing new models.

--- a/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -5,11 +5,12 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 10
 			%Mods
 			{
 				Parallax
 				{
-					subdivisionLevel = 7
+					subdivisionLevel = 8
 					subdivisionRadius = 900
 					order = 999999
 				}
@@ -26,6 +27,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -47,11 +49,12 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 10
 			%Mods
 			{
 				Parallax
 				{
-					subdivisionLevel = 7
+					subdivisionLevel = 8
 					subdivisionRadius = 1400
 					order = 999999
 				}
@@ -68,6 +71,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 7
 			%Mods
 			{
 				Parallax
@@ -89,6 +93,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -110,11 +115,12 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 10
 			%Mods
 			{
 				Parallax
 				{
-					subdivisionLevel = 16
+					subdivisionLevel = 8
 					subdivisionRadius = 10
 					order = 999999
 				}
@@ -131,6 +137,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -152,6 +159,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -173,6 +181,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -194,6 +203,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -215,6 +225,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -236,6 +247,7 @@
         %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -257,6 +269,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -278,22 +291,29 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
 				{
-					subdivisionLevel = 6
+					subdivisionLevel = 7
 					subdivisionRadius = 700
 					order = 999999
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Lon]
     {
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			%maxLevel = 9
 			%Mods
 			{
 				Parallax
