--- a/GameData/OuterParallax/MPE/_Scatters/Lon.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Lon.cfg
@@ -51,7 +51,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 0.3
 				spawnChance = 0.75
-				range = 150
+				range = 225
 				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
@@ -93,7 +93,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod0
 			collisionLevel = 1
 			Optimizations
 			{
@@ -137,7 +137,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 0.99
 				spawnChance = 0.75
-				range = 150
+				range = 225
 				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
@@ -156,7 +156,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod1
 						range = 15
 						MaterialOverride
 						{
@@ -164,7 +164,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod2
 						range = 30
 						MaterialOverride
 						{
@@ -223,7 +223,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 4
 				spawnChance = 0.5
-				range = 650
+				range = 950
 				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
@@ -265,7 +265,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/medvar3lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -309,7 +309,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 5.2
 				spawnChance = 0.5
-				range = 900
+				range = 1100
 				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
@@ -328,16 +328,16 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 60
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod1
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod2
+						range = 120.000008
 						MaterialOverride
 						{
 						}
@@ -395,7 +395,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 4
 				spawnChance = 0.75
-				range = 2000
+				range = 2500
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
@@ -437,7 +437,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -481,7 +481,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 4.8
 				spawnChance = 0.5
-				range = 2000
+				range = 2500
 				populationMultiplier = 2
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
@@ -500,7 +500,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod1
 						range = 120
 						MaterialOverride
 						{
@@ -508,7 +508,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod2
 						range = 240
 						MaterialOverride
 						{
@@ -567,7 +567,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				seed = 10
 				spawnChance = 0.3
-				range = 2000
+				range = 2500
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
