--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -3,7 +3,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures,OPM]
 	Body
 	{
 		name = Hale
-		emissive = True
+		emissive = False
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/PluginData/Regolith_Diff.dds
@@ -26,15 +26,15 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures,OPM]
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
-			_SpecularPower = 232
-			_SpecularIntensity = 0.2
+			_SpecularPower = 10
+			_SpecularIntensity = 0.1
 			_FresnelPower = 2
 			_EnvironmentMapFactor = 0.5
 			_RefractionIntensity = 0
 			_Tiling = 0.02
 			_Hapke = 0.5
 			_BumpScale = 2.5
-			_EmissionColor = 0.0500000007,0.0500000007,0.0500000007,1
+			_EmissionColor = 0.0,0.0,0.0,1
 		}
 	}
 	Body
