--- a/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -5,11 +5,12 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
 				{
-					subdivisionLevel = 7
+					subdivisionLevel = 8
 					subdivisionRadius = 900
 					order = 999999
 				}
@@ -26,6 +27,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -47,6 +49,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -68,6 +71,7 @@
         %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -89,6 +93,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -110,6 +115,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -131,6 +137,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -152,6 +159,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -173,6 +181,7 @@
         %cacheFile:NEEDS[!Scatterer] = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -194,6 +203,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -215,6 +225,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
@@ -236,6 +247,7 @@
         %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
+			maxLevel = 9
 			%Mods
 			{
 				Parallax
