--- a/GameData/OuterParallax/OPM/_Scatters/Thatmo.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Thatmo.cfg
@@ -536,7 +536,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod0
 			collisionLevel = 1
 			Optimizations
 			{
@@ -599,7 +599,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod1
 						range = 15
 						MaterialOverride
 						{
@@ -607,7 +607,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod2
 						range = 30
 						MaterialOverride
 						{
@@ -714,7 +714,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 		Scatter
 		{
 			name = MedRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/medvar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -777,7 +777,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod1
 						range = 40
 						MaterialOverride
 						{
@@ -785,7 +785,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod2
 						range = 100
 						MaterialOverride
 						{
@@ -803,7 +803,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/medvar3lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -866,16 +866,16 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 60
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod1
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod2
+						range = 120.000008
 						MaterialOverride
 						{
 						}
