--- a/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
@@ -31,8 +31,8 @@ ParallaxScatters
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
 				_SpecularPower = 15
 				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
@@ -40,7 +40,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 1,1,1,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -122,7 +122,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 1,1,1,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -195,8 +195,8 @@ ParallaxScatters
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
 				_SpecularPower = 15
 				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
@@ -204,7 +204,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.629999995,0.699999988,0.75,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -286,7 +286,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.629999995,0.699999988,0.75,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -359,8 +359,8 @@ ParallaxScatters
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
 				_SpecularPower = 15
 				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
@@ -368,7 +368,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.629999995,0.699999988,0.75,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -450,7 +450,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.629999995,0.699999988,0.75,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
@@ -523,8 +523,8 @@ ParallaxScatters
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
 				_SpecularPower = 15
 				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
@@ -532,7 +532,7 @@ ParallaxScatters
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.629999995,0.699999988,0.75,1
+				_Color = 0.804,0.847,0.894, 1
 				_CullMode = 2
 				Keywords
 				{
