--- a/GameData/OuterParallax/OPM/_Scatters/Hale.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Hale.cfg
@@ -13,7 +13,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -56,10 +58,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
-				steepPower = 8
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -95,7 +97,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -138,10 +142,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
-				steepPower = 8
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -177,7 +181,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -220,10 +226,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
-				steepPower = 8
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.250000358
+				maxNormalDeviance = 0.250000745
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -259,7 +265,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -302,10 +310,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
 				cutoffScale = 0.639999986
-				steepPower = 8
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.216131032
+				maxNormalDeviance = 0.216131389
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
