--- a/GameData/OuterParallax/OPM/_Scatters/Priax.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Priax.cfg
@@ -40,7 +40,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -122,7 +122,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -204,7 +204,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -286,7 +286,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -368,7 +368,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -450,7 +450,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -532,7 +532,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -614,7 +614,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
@@ -696,7 +696,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 				_BumpScale = 1.5
 				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.949999988,1,1,1
+				_Color = 0.800, 0.900, 0.900, 1.000
 				_CullMode = 2
 				Keywords
 				{
