--- a/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
@@ -857,7 +857,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -893,17 +895,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 9
-				spawnChance = 1
+				spawnChance = 0.649999976
 				range = 2000
-				populationMultiplier = 6
+				populationMultiplier = 3
 				minScale = 6,6,6
 				maxScale = 17,17,17
 				scaleRandomness = 0.5
 				cutoffScale = 0.5
-				steepPower = 2
+				steepPower = 4
 				steepContrast = 1
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.720000471
+				maxNormalDeviance = 0.418408364
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -1136,7 +1138,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1182,9 +1186,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
@@ -1230,7 +1234,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1276,9 +1282,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
@@ -1324,7 +1330,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1370,9 +1378,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
