--- a/GameData/OuterParallax/OPM/_Scatters/Tal.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Tal.cfg
@@ -13,7 +13,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 75
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -49,9 +51,9 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 0
-				spawnChance = 0.699999988
+				spawnChance = 0.600000024
 				range = 150
-				populationMultiplier = 6
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -59,9 +61,9 @@ ParallaxScatters
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000674
+				maxNormalDeviance = 0.200001001
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -95,7 +97,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 75
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -131,9 +135,9 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 1
-				spawnChance = 0.699999988
+				spawnChance = 0.600000024
 				range = 150
-				populationMultiplier = 6
+				populationMultiplier = 3
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -141,9 +145,9 @@ ParallaxScatters
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000674
+				maxNormalDeviance = 0.200001001
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -177,7 +181,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 108.333336
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -213,7 +219,7 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 3
-				spawnChance = 0.649999976
+				spawnChance = 0.550000012
 				range = 650
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -223,9 +229,9 @@ ParallaxScatters
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000674
+				maxNormalDeviance = 0.200001001
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -259,7 +265,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -295,7 +303,7 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.649999976
+				spawnChance = 0.419999987
 				range = 900
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -305,9 +313,9 @@ ParallaxScatters
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000674
+				maxNormalDeviance = 0.200001001
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -389,7 +397,7 @@ ParallaxScatters
 				steepMidpoint = 0.731000006
 				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -471,7 +479,7 @@ ParallaxScatters
 				steepMidpoint = 0.731000006
 				maxNormalDeviance = 0.200000674
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -553,7 +561,7 @@ ParallaxScatters
 				steepMidpoint = 0.731000006
 				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
-				maxAltitude = 10000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
